# bd_mixins

./: .gitignore  README.md  pyproject.toml
src/bd_mixins/: __init__.py  objects_tangent.py
src/bd_mixins/gltf_tools/: README.md  __init__.py  appearance.py  demo.py  demo_scene.step  export.py
src/bd_mixins/gltf_tools/examples/: demo.py  demo_bottle.py  demo_bottle.step  demo_scene.py  demo_scene.step
