[project]
name = "bd_mixins"
version = "0.1.0"
description = "Mixin test bed for build123d objects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build123d==0.9.1",
    "ocp-vscode==2.6.4",
    "pip>=25.0",
    "ruff>=0.9.3",
    "sympy",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["F403", "F405"]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
